# knowledgebase-processor

./: .dockerignore  .gitignore  ARCHITECTURE_V2.md  CLAUDE.md  CLI_V2_DEMO.md  CONSOLIDATION_SUMMARY.md  Dockerfile  Dockerfile.alpine  ENHANCED_ARCHITECTURE.md  README-docker.md  README.md  REFACTOR.md  conversation.txt  docker-compose.app.yml  docker-compose.prod.yml  docker-compose.yml  issue_29_comment.md  issue_44_implementation_plan.md  pr30_review_plan.md  project.toml  pyproject.toml  pytest.ini  task_log.jsonl  task_queue.jsonl  test_issue_49_integration.py
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
.devcontainer/: devcontainer.json
.github/workflows/: build-artifacts.yml  publish-webapp-gcr.yml  publish-webapp-ghcr.yml
.roo/: mcp.json
.roo/rules/: rules.md
.state/tasks/: 001#chore#initial_setup.json  002#implement#markdown_parser.json  003#implement#heading_section_extraction.json  004#implement#list_table_extraction.json  005#implement#todo_item_extraction.json  006#implement#code_quote_extraction.json  007#implement#frontmatter_tag_extraction.json  008#implement#link_reference_extraction.json  009#implement#content_preservation.json  010#chore#phase1_integration.json  011#chore#review_phase1.json  (+6 more)
docs/: README.md  documentation-approach.md  phase1_integration.md  use-cases.md
examples/: simple_usage.py
sample_data/: Alex Cipher-meetingnote-2024-11-07.md  CTO Coffee-2024-11-07.md  Coffee Ops-2024-11-07.md  DORA Community Discussion-2024-11-07.md
scripts/: anonymize_markdown.py  build.sh  docker-run.sh  regenerate_spec_outputs.py  run_performance_tests.py  run_processor.py  run_tests.py  sync-vocabulary.sh
specs/: README.md
test-cli/: README.md  test.md
tests/: test_api.py  test_api_integration.py  test_e2e.py  test_integration.py  test_reference_corpus.py  test_specifications.py
vocabulary/: README.md  VERSION.json
webapp/: .dockerignore  .gitignore  Dockerfile  GCP_SETUP.md  GHCR_SETUP.md  README.md  docker-compose.yml  requirements.txt  start.sh  test_webapp.py
(+371 files in other folders)
