[tool.poetry]
name = "knowledgebase-processor"
version = "0.1.0"
description = ""
authors = ["David Stenglein <dave@davidstenglein.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
