[tool.poetry]
name = "knowledgebase-processor"
version = "0.1.0"
description = "A tool for extracting and analyzing knowledge base content"
authors = ["David Stenglein <dave@davidstenglein.com>"]
readme = "README.md"
packages = [{include = "knowledgebase_processor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
markdown-it-py = "^3.0.0"
pyyaml = "^6.0.2"
tomli = "^2.2.1"
spacy = "^3.7.0"
rdflib = "^7.0.0"

[tool.poetry.scripts]
kbp = "knowledgebase_processor.cli:main"
test = "scripts.run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
