[tool.poetry]
name = "knowledgebase-processor"
version = "0.1.0"
description = "A tool for extracting and analyzing knowledge base content"
authors = ["David Stenglein <dave@davidstenglein.com>"]
readme = "README.md"
packages = [{include = "knowledgebase_processor", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.4"
markdown-it-py = "^3.0.0"
pyyaml = "^6.0.2"
tomli = "^2.2.1"
# spacy = "^3.7.0"  # Removed to avoid C compilation issues in cloud builds
rdflib = "^7.0.0"
click = "^8.1.0"
rich = "^13.7.0"
watchdog = "^3.0.0"
SPARQLWrapper = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-benchmark = "^4.0.0"
psutil = "^5.9.0"
docker = "^6.1.0"
requests = "^2.31.0"

[tool.poetry.scripts]
kbp = "knowledgebase_processor.cli:main"
kb = "knowledgebase_processor.cli_v2.main:main"
test = "scripts.run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

